<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kevinmatsubara.japanesesentencemaker.InputActivity">

    <Spinner
        android:id="@+id/spn_inputType"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/tbx_addFurigana"
        android:hint="@string/inputHintFurigana"
        android:maxLength="80"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_below="@id/spn_inputType"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tbx_addKanji"
        android:hint="@string/inputHintKanji"
        android:maxLength="80"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_below="@id/tbx_addFurigana"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tbx_addMeaning"
        android:hint="@string/inputHintMeaning"
        android:maxLength="80"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_below="@id/tbx_addKanji"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spn_inputCategoryItem"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbx_addMeaning" />

    <Button
        android:id="@+id/btn_insertCategoryItem"
        android:text="@string/insertCategoryItem"
        android:layout_width="wrap_content"
        android:layout_below="@id/spn_inputCategoryItem"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_addNew"
        android:text="@string/addNew"
        android:layout_width="wrap_content"
        android:layout_below="@id/spn_inputCategoryItem"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content" />

</RelativeLayout>
